--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
             <!-- single icon -->
             <li>
               <a
-                href="https://www.twitter.com"
+                href="https://twitter.com/astanjin"
                 target="_blank"
                 class="nav-icon"
               >
-                <i class="fab fa-facebook"></i>
+                <i class="fab fa-twitter"></i>
               </a>
             </li>
             <!-- end of single icon -->
@@ -453,8 +453,12 @@
       <ul class="footer-icons">
         <!-- single icon -->
         <li>
-          <a href="https://www.twitter.com" target="_blank" class="footer-icon">
-            <i class="fab fa-facebook"></i>
+          <a
+            href="https://twitter.com/astanjin"
+            target="_blank"
+            class="footer-icon"
+          >
+            <i class="fab fa-twitter"></i>
           </a>
         </li>
         <!-- end of single icon -->
